"auth.login.client.title" = "Welcome, please log in";
"auth.login.email" = "Email";
"auth.login.password" = "Password";
"auth.login.submit" = "Login";
